@@ -1,3 +1,7 @@
+2007-06-06  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpprojection.c: cosmetics.
+
 2007-06-06  Martin Nordholts  <martinn@svn.gnome.org>
 
 	Implemented an image pyramid for the GimpProjection. An image pyramid
